--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Open+Sans+Condensed:wght@300&display=swap');
 
-font-family: 'Montserrat', sans-serif;
-font-family: 'Open Sans Condensed', sans-serif;
+
+body{
+    font-family: 'Montserrat', sans-serif;
+}
+
