docs: list styling updation

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -29,7 +29,7 @@ hr{
     padding: 0.5rem 1rem;
     border-radius: 0.5rem;
     border: 1px dashed red;
-
+    color: blueviolet;
 }
 
 .primary-links{
@@ -42,4 +42,13 @@ hr{
     color: var(--primary-color);
     background-color: azure;    
     border: 1px solid var(--primary-color);
+}
+
+.list-non-bullet{
+    list-style: none;
+}
+
+.list-item-inline{
+    display: inline;
+    padding: 0rem 0.5rem;
 }
