--- a/CSS/style.css
+++ b/CSS/style.css
@@ -24,6 +24,8 @@ hr{
     padding-right: 1rem;
 }
 
+
+/* Links */
 .links{
     text-decoration: none;
     padding: 0.5rem 1rem;
@@ -44,6 +46,8 @@ hr{
     border: 1px solid var(--primary-color);
 }
 
+
+/* Lists */
 .list-non-bullet{
     list-style: none;
 }
@@ -51,4 +55,33 @@ hr{
 .list-item-inline{
     display: inline;
     padding: 0rem 0.5rem;
+}
+
+/* Nav */
+
+.navigation{
+    background-color: var(--primary-color);
+    padding: 1rem;
+    color: white;
+    border-radius : 0rem 1rem;
+}
+
+.navigation .nav-brand{
+    font-weight: bold;
+}
+
+.navigation .links{
+    /* float: right; */
+    color: white;
+    border: 1px solid;
+}
+
+.navigation .nav-pills{
+    text-align: right;
+
+}
+
+.navigation .link-active{
+    font-weight: bold;
+    color: azure;
 }
