--- a/CSS/style.css
+++ b/CSS/style.css
@@ -35,7 +35,6 @@ hr{
     text-decoration: none;
     padding: 0.5rem 1rem;
     border-radius: 0.5rem;
-    /* border: 1px dashed red; */
     color: blueviolet;
 }
 
@@ -47,6 +46,7 @@ hr{
     background-color: var(--primary-color);
     color: azure;
     border: 1px solid var(--primary-color);
+    margin-right: 1rem;
 }
 
 .tp{
@@ -77,7 +77,8 @@ hr{
     padding: 1rem;
     color: white;
     /* border-radius : 0rem 1rem; */
-    border-bottom-right-radius: 2rem;
+    border-radius: 2rem 0rem;
+    margin-top: 0.5rem;
 }
 
 .navigation .nav-brand{
@@ -125,15 +126,16 @@ hr{
 /* Section */
 .section h3{
     text-align: center;
-    padding: 2rem;
     color: var(--dark);
     font-weight: bold;
     font-size: 30px;
     color: var(--primary-color);
 }
+
 .Off-white{
     background-color: var(--offWhite) ;
 }
+
 .center-container{
     padding-bottom:1rem ;
 }
@@ -143,8 +145,9 @@ hr{
 }
 
 section{
-    padding-bottom: 1rem;
+    padding: 1rem 0rem;
     border-radius: 1rem 0rem;
+    margin-top: 2rem;
 }
 
 
@@ -154,7 +157,9 @@ section{
     padding: 2rem;
     text-align: center;
     color: white;
-    border-top-left-radius: 2rem;
+    border-radius: 2rem 0rem;
+    margin-top: 2rem;
+    margin-bottom: 0.5rem;
 }
 
 .footer ul{
