--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,114 +1,138 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Open+Sans+Condensed:wght@300&display=swap');
 
-:root{
+:root {
     --background-pri-color: #e0e0e0;
-    --lightDark: #dceee5;
-    --dark: #14122b;
-    --navLink : #011a01;
-    --offWhite : rgb(131, 129, 146);
-    --primary-link-color: #235789;
-    --secondary-link-color: #123456;
+    --section2-color: #e9f0de;
+    --section1-color: #cfe2f5b9;
+    --heading-dark: #012904;
+    --navLink: #011a01;
+    --primary-link-color: #000000;
+    --secondary-link-color: #ffffff;
+    --shadow-color: rgba(0, 0, 0, 0.2);
 }
 
-body{
+body {
     font-family: 'Montserrat', sans-serif;
     max-width: 1200px;
     padding: 0rem;
     margin: auto;
 }
-hr{
+
+hr {
     margin: 1rem 0rem;
 }
 
 /* container */
 
-.center-container{
+.center-container {
     padding-left: 1rem;
     padding-right: 1rem;
     max-width: 700px;
     margin: auto;
 }
-.fluid-container{
+
+.fluid-container {
     padding-left: 1rem;
     padding-right: 1rem;
 }
 
 
 /* Links */
-.nav-links{
+.nav-links {
     text-decoration: none;
     padding: 0.5rem;
     border-radius: 0.5rem;
     color: var(--navLink);
 }
 
-.link-active{
-    border:  2px solid var(--navLink);
+.link-active {
+    border: 2px solid var(--navLink);
 }
 
-.links{
+.links {
     text-decoration: none;
-    padding: 0.5rem;
-    border-radius: 0.5rem;
-    margin-right: 1rem;
+    padding: 1rem;
+    /* border-radius: 0.5rem; */
+    margin-right: 2rem;
+    transition: 0.2s ease-in;
+    font-weight: bold
 }
 
-.primary-links{
-    background-color: var(--background-pri-color);
-    color: azure;
-    border: 1px solid var(--background-pri-color);
-    
+.primary-links {
+    background-color: var(--primary-link-color);
+    color: white;
+    border: 1px solid black;
 }
 
-.secondary-links{
-    color: var(--background-pri-color);
-    background-color: azure;    
-    border: 1px solid var(--background-pri-color);
+.primary-links:hover {
+    transform: scale(1.02);
+    background-color: var(--secondary-link-color);
+    border-style: inherit;
+    color: var(--primary-link-color);
+    box-shadow: 2px 2px 5px 5px var(--shadow-color);
+
 }
 
-.tp{
-    margin-top: 1rem;
+.secondary-links {
+    color: black;
+    font: bold;
+    background-color: var(--secondary-link-color);
+    border: 0.1rem solid black;
 }
 
-.social{
+.secondary-links:hover {
+    transform: scale(1.02);
+    background-color: var(--primary-link-color);
+    color: var(--secondary-link-color);
+    box-shadow: 2px 2px 5px 5px var(--shadow-color);
+}
+
+.social {
     color: var(--navLink);
     font-size: 1.5rem;
-    padding: rem;
+    padding: 0rem;
     margin: 0 0.5rem;
     text-decoration: none;
+    transition: 0.2s ease-in-out;
 }
 
-.facebook:hover{
-    color:blue;
+.facebook:hover {
+    color: blue;
+    transform: scale(1.02);
 }
-.twitter:hover{
-    color:rgb(74, 154, 207);
+
+.twitter:hover {
+    color: rgb(74, 154, 207);
 }
-.instagram:hover{
-    color:rgb(252, 79, 79);
+
+.instagram:hover {
+    color: rgb(196, 13, 13);
 }
-.linkedin:hover{
-    color:rgb(2, 34, 179);
+
+.linkedin:hover {
+    color: rgb(2, 34, 179);
 }
-.github:hover{
-    color:rgb(41, 41, 41);
+
+.github:hover {
+    color: rgb(41, 41, 41);
+    opacity: 0.8;
 }
 
 
 
 /* Lists */
-.list-non-bullet{
+.list-non-bullet {
     list-style: none;
 }
 
-.list-item-inline{
+.list-item-inline {
     display: inline;
     padding: 0rem 0.5rem;
 }
 
 
 /* Nav */
-.navigation{
+.navigation {
     background-color: var(--background-pri-color);
     padding: 1rem;
     color: white;
@@ -116,83 +140,87 @@ hr{
     font-weight: bold;
 }
 
-.nav-brand{
-    color:VAR(--navLink);
+.nav-brand {
+    color: VAR(--navLink);
     font-weight: bold;
     font-size: 2rem;
     font-family: cursive;
 }
 
-.navigation .links{
+.navigation .links {
     color: white;
 }
 
-.navigation .nav-pills{
+.navigation .nav-pills {
     text-align: center;
 }
 
-.image-head{
+.image-head {
     border-radius: 50%;
     padding-left: 1rem;
     padding-top: 1rem;
 }
 
 /* HEADING */
-.hero{
+.hero {
     padding: 2rem;
     text-align: center;
     color: var(--navLink)
 }
 
-.hero-image{
+.hero-image {
     max-width: 350px;
     display: block;
     margin: auto;
 }
 
-.hero-heading{
+.hero-heading {
     text-align: center;
     padding-top: 1rem;
-    color: var(--dark);
+    color: var(--heading-dark);
     font-weight: bold;
     font-size: 40px;
 }
 
-.hero-heading .heading-inverted {
-    color: var(--background-pri-color);
+.heading-inverted {
+    color: var(--shadow-color);
 }
 
 
 /* Section */
-.section h3{
+.section h3 {
     text-align: center;
-    color: var(--dark);
     font-weight: bold;
     font-size: 30px;
-    color: var(--background-pri-color);
+    color: var(--heading-dark);
 }
 
-.Off-white{
-    background-color: var(--offWhite) ;
+h2 {
+    color: var(--heading-dark);
 }
 
-.center-container{
-    padding-bottom:1rem ;
+.Off-white {
+    background-color: var(--section1-color);
 }
 
-.light-dark{
-    background-color: var(--lightDark);
+.center-container {
+    padding-bottom: 1rem;
 }
 
-section{
+.light-dark {
+    background-color: var(--section2-color);
+}
+
+section {
     padding: 1rem 0rem;
     border-radius: 1rem 0rem;
     margin-top: 2rem;
+    /* border: 1px black solid ; */
 }
 
 
 /* footer */
-.footer{
+.footer {
     background-color: var(--background-pri-color);
     padding: 1rem;
     text-align: center;
@@ -202,43 +230,64 @@ section{
     margin-bottom: 0.5rem;
 }
 
-.footer ul{
+.footer ul {
     padding-inline-start: 0px;
-    margin-top:30px;
+    margin-top: 30px;
 }
 
-.footer-head{
+.footer-head {
     font-weight: bold;
     font-size: 35px;
     font-family: cursive;
     color: var(--navLink);
 }
 
-.footer-div{
+.footer-div {
     color: var(--navLink);
 }
 
 /* blog */
-.underline{
+.underline {
     text-decoration: underline;
 }
 
-.inline-links{
+.inline-links {
     text-decoration: none;
     color: var(--background-pri-color);
 }
 
-.br{
-margin: 10px;
+.br {
+    margin: 10px;
 }
 
 
 /* RESPONSIVE DESIGN */
 
-@media (max-width:768 px){
-    body{
+@media (max-width:768 px) {
+    body {
         display: flex;
         max-width: 700px;
         padding: 0 1.5rem;
+    }
+
+    .hero-image {
+        max-width: 20px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        margin: auto;
+
+    }
+}
+
+@media (max-width:468px){
+    .hero-image{
+        width: 100%;
+        height: auto;
+        padding: 1rem;
+    }
+    .list-item-inline {
+        display: block;
+        margin: 1.2rem;
     }
 }
